Actualización de la interfaz de mockp

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,15 +14,16 @@
   </h3>
 </div>
 
-<div class="barraReducida" *ngIf="!isSidebarVisible" (click)="toggleSidebar()">
+
+<div class="barraReducida" *ngIf="!isSidebarVisible" (click)="toggleSidebar($event)">
   <h3>Proyectos de Extensión<i class="fa-solid fa-chevron-down icono"></i></h3>
 </div>
-
-<div class="sidebar" *ngIf="isSidebarVisible" (click)="toggleSidebar()">
+<div class="sidebar-overlay" *ngIf="isMobile && isSidebarVisible" (click)="toggleSidebar()"></div>
+<div class="sidebar" *ngIf="isSidebarVisible" [ngClass]="{'sidebar-visible': isSidebarVisible, 'sidebar-reduced': isSidebarReduced} " [ngClass]="{'reduced': isSidebarReduced, 'expanded': !isSidebarReduced}">
   <h2>
     <i class="fa-regular fa-user"></i>
     Panel de Información 
-    <i class="fa-solid fa-chevron-up" (click)="toggleSidebar()"></i>
+    <i class="fa-solid fa-chevron-up" (click)="toggleSidebar($event)"></i>
   </h2>
   <div class="InformacionPersonal">
     <span class="bordeTexto">Información</span>
@@ -30,31 +31,30 @@
   <h1><i class="fa-solid fa-bars"></i> Menú Principal</h1>
   <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
     <div class="btn-group" role="group">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" (click)="toggleAccordion('convocatorias')" aria-expanded="false">
         Convocatorias
       </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Crear Convocatorias</a></li>
-        <li><a class="dropdown-item" href="#">Ver Convocatorias</a></li>
+      <ul  *ngIf="isConvocatoriasOpen">
+        <li><a class="dropdown-item" [routerLink]="['crear-convocatoria']">Crear Convocatorias</a></li>
+        <li><a class="dropdown-item" [routerLink]="['ver-convocatorias']">Ver Convocatorias</a></li>
       </ul>
     </div>
     <div class="btn-group" role="group">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" (click)="toggleAccordion('proyectos')" aria-expanded="false">
         Proyectos
       </button>
-      <ul class="dropdown-menu">
+      <ul *ngIf="isProyectosOpen">
         <li><a class="dropdown-item" href="#">Inscripción de Grupo</a></li>
         <li><a class="dropdown-item" href="#">Gestionar Proyecto</a></li>
       </ul>
     </div>
-    <button type="button" class="btn btn-primary">Indicadores de Cobertura</button>
+    <button type="button" id="Largo" class="btn btn-primary">Indicadores de Cobertura</button>
     <button type="button" class="btn btn-primary">Usuarios</button>
   </div>
   <div id="informacionUniversidad">
-    <span>© 2024 <a href="https://www.uniamazonia.edu.co/inicio/index.php/es/">Universidad de la Amazonia</a> - Todos los derechos reservados</span>
+    <span>© 2024 <a href="https://www.uniamazonia.edu.co/inicgit initio/index.php/es/">Universidad de la Amazonia</a> - Todos los derechos reservados</span>
   </div>
 </div>
-<app-principal></app-principal>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
