--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -10,6 +10,7 @@ body {
   color: var(--white);
   background-color: var(--primary);
   height: 100vh;
+  overflow: none;
 }
 .barratitulo {
     background-color: #DAF0FF;
@@ -63,7 +64,7 @@ body {
 
 
 .barraRecargarpagina h3 {
-    font-size: 11px;
+    font-size: 10px;
     color: #000000;
     font-weight: 500;
     margin: 0;
@@ -81,9 +82,8 @@ body {
 
   .recargarTexto {
       cursor: pointer;
-      
   }
-
+ 
   .sidebar {
     width: 16%;
     min-width: 150px; 
@@ -102,7 +102,11 @@ body {
     border-bottom: 1px solid var(--gray);
     display: block;
   }
-  
+
+.sidebar-reduced.sidebar-visible {
+  transform: translateX(0); /* Muestra la barra lateral desde la derecha */
+}
+
   .sidebar h2 {
     color: #ffffff;
     font-weight: 500;
@@ -149,6 +153,15 @@ body {
     padding: 0 8px;
     background-color: white;
   }
+  .sidebar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 4;
+  }
   .sidebar h1{
     color: #ffffff;
     font-weight: 500;
@@ -172,11 +185,23 @@ body {
     transition: transform 0.3s ease;  
   }
   
-  .btn-group-vertical{
+  .btn-group-vertical {
+    position: relative;
+    display: flex; 
+    flex-direction: column; 
     width: 100%;
     height: 12%;
-    top:55%;
+    top: 52%;
+    margin-top: 35px; 
   }
+  .dropdown-vertical .dropdown-menu {
+    position: relative;
+    inset: auto;
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  
   .btn-group-vertical .btn {
     margin-bottom: 5px;
     background-color: #e7e7e7;
@@ -192,29 +217,83 @@ body {
     margin-bottom: 5px;
     padding-right: 15px;
     padding-left: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
   
   
   .btn-group-vertical .btn:hover {
     background-color: #DAF0FF;
   }
-  
+  .btn-group {
+    position: static;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
   .dropdown-menu {
-    background-color: #f8f9fa;
-    border-radius: 5px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    z-index: 100;
+    position: static !important;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #f1f1f1;
+    border: none;
+    list-style-type: none !important;
+  }
+  .dropdown-menu li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .dropdown-menu li a {
+    display: block;
+    padding: 8px 15px 8px 15px;
+    font-size: 12px;
+    color: #000000;
+    text-decoration: none;
+    font-family: Arial, sans-serif;
+    border-bottom: 1px solid #e7e7e7;
+    background-color: #f1f1f1;
+    outline: none;
+  }
+.dropdown-menu li:last-child a {
+  outline: none;
+  border-bottom: none;
+}
+
+.dropdown-menu li a:hover {
+  background-color: #DAF0FF;
+}
+
+
+  .dropdown-menu.show {
+    display: block; 
+  }
+  .dropdown-item {
+    font-size: 10px;
+    padding: 8px;
+    color: #080808;
+    top: 10px;
+
+  }
+  
+  .dropdown-item:hover {
+    background-color: #007bff;
+    color: white;
+  }
+  
+  .btn-primary {
+    background-color: #007bff;
+    color: white;
+  }
+  
+  .btn-primary:hover {
+    background-color: #0056b3;
   }
   .dropdown-menu li a {
     padding: 10px;
     font-size: 14px;
     font-family: Arial, sans-serif; 
-  }
-  
-  .dropdown-item:hover {
-    background-color: #428bca;
-    color: white;
   }
 
   .barraReducida {
@@ -316,26 +395,37 @@ body {
   text-decoration: none;
   
 }
+.btn-group ul {
+  list-style-type: none;  
+  padding-left: 0;       
+  margin: 0;        
+}
+
 
 @media screen and (max-width: 768px) {
   .sidebar {
-    transform: translateX(-100%);
-    width: 80%;
-    max-width: 300px;
+    transform: translateX(0);
+    width: 10%;
+    top: 0;
   }
-  
   .barraReducida {
-    display: flex; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin-bottom: 0;
   }
-
-  .sidebar h2 {
-    width: 100%;
+  .barraReducida h3  {
+    font-size: 15px;
+    top: 400px;
   }
-
-  .sidebar h1 {
-    width: 100%;
+  .icono{
+    font-size: 10px;
+    top: 0;
   }
+ .btn-group-vertical{
 
+  top: 62%;
+ }
   .InformacionPersonal {
     width: 90%;
   }
@@ -355,9 +445,38 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 4;
 }
-
-@media screen and (max-width: 768px) {
-  .sidebar-overlay.visible {
-    display: block;
+@media screen and (max-width: 1180px) {
+  #Largo{
+  white-space: normal; 
+  word-wrap: break-word; 
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   }
+}
+@media screen and (max-width: 950px) {
+  .sidebar h2 {
+    display: block;
+    width: 150px;
+  }
+  .sidebar h1{
+    display: block;
+    width: 150px;
+  }
+  #informacionUniversidad{  
+    display: block;
+    width: 150px;
+  }
+  #Largo{
+    white-space: normal; 
+  word-wrap: break-word; 
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  }
+
 }
