--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -1,6 +1,293 @@
-.hola{
-    background-color: red;
-    position: relative;
-    top: 15%;
-    left: 15%;
+.main-container {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-left: 16.2%;
+  margin-top: 4%;
+  width: 83.5%;
+  transition: margin-left 0.3s ease;
+  border: 1px solid rgb(193, 193, 193);
+  z-index: 0; 
+}
+
+.main-container.with-sidebar {
+  margin-left: 16.2%;
+}
+
+.main-container.without-sidebar {
+  margin-left: 2.7%;
+  width: calc(100% - 3%);
+  max-width: 100%;
+}
+
+.main-header {
+  background-color: #f7f5f5;
+  color: #044BFF;  
+  padding: 10px;
+  text-align: left;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+}
+.custom-size {
+  width: 50px; 
+  height: 50px;
+  font-size: 20px; 
+}
+.main-content {
+  flex: 1;
+  padding: 20px;
+  background-color: #ffffff;
+  height: 82vh;
+  overflow: auto;
+}
+
+/* Estilo del botón flotante */
+.modify-button {
+  position: fixed;
+  top: 60px;
+  right: 20px;
+  z-index: 1000;
+  background-color: #428bca;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+}
+
+.modify-button:hover {
+  background-color: #0056b3;
+  cursor: pointer;
+}
+.modal {
+  display: block !important;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 8px;
+  z-index: 1001;
+  width: 850px;
+  max-width: 100%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.modal h2{
+  color: #0056b3;
+
+}
+boton{
+  margin: 10px;
+}
+.btn-margin {
+  margin-left: 10px;  
+}
+.input-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.form-control{
+  position: absolute;
+  display: flex;
+  width: 90%;
+  }
+.btn-danger{
+  position: relative;
+  left: 93%;
+  top:19%;
+  margin-left: 10px;
+}
+.image-options {
+  display: flex;  
+  gap: 20px;
+  margin-top: 15px;
+  align-items: center;
+  margin-left: 33%;
+}
+
+.option-btn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 5px;
+  height: 200px;
+  width: 100%;  
+}
+
+.option-btn img {
+  width: 100px;  /* Ajusta el tamaño de la imagen */
+  margin-bottom: 10px;  /* Añade espacio entre la imagen y el texto */
+}
+
+.option-btn label {
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;  /* Centra el texto */
+  color: #333;  /* Cambia el color del texto según sea necesario */
+}
+
+.option-btn:hover {
+  background-color: #e0e0e0;
+}
+
+
+.plus-icon {
+  margin-right: 10px;
+}
+label {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000; 
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  cursor: pointer;
+}
+.close-button:hover {
+  color: red;
+}
+.uploaded-image {
+  width: 500px;  
+  height: 300px;
+  max-width: 100%;  
+  max-height: 100%;
+  object-fit: contain; 
+  background-color: #ffffff; 
+  padding: 6px;  
+  margin: 10px auto;
+  display: block; 
+  border-radius: 8px; 
+}
+.image-container {
+  position: relative;
+  display: inline-block;
+  margin: 10px;
+  max-width: 300px;
+}
+
+.uploaded-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.carousel-container {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  margin: 20px auto;
+}
+
+.carousel {
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.remove-carousel-btn {
+  position: absolute;
+  width: 5%;
+  margin-top: 6px;
+  z-index: 1000;
+  top: 0;
+  padding: 5px;
+  border-radius: 6px;
+  font-size: 12px;
+}
+.btn-dangerimg{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+  align-items: center;
+}
+.image-container .btn-danger {
+  display: block;
+}
+
+.carousel-container .carousel-inner {
+  position: relative;
+}
+
+.carousel-item {
+  position: relative;
+}
+
+.delete-image-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+}
+
+@media screen and (max-width: 768px) {
+  .main-container {
+    top: 23px;
+    left: -78px;
+    width: 93%;
+  }
+
+  .main-header {
+    font-size: 12px;
+  }
+
+  .main-content {
+    font-size: 12px;
+  }
+
+  .modal {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 690px) {
+  .main-container {
+    top: 30px;
+    left: -50px;
+    width: 93%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .main-container {
+    top: 36px;
+    left: -25px;
+  }
+
+  .main-header {
+    font-size: 12px;
+  }
 }
