--- a/src/app/crear-convocatoria/crear-convocatoria.component.css
+++ b/src/app/crear-convocatoria/crear-convocatoria.component.css
@@ -4,10 +4,9 @@
   flex-direction: column;
   margin-left: 16.2%;
   margin-top: 4%; 
-  width: 83.5%;
+  width: 82.9%;
   transition: margin-left 0.3s ease;
   border: 1px solid rgb(193, 193, 193);
-  z-index: 0;
 }
 .main-container.with-sidebar {
   margin-left: 16.2%;
@@ -149,4 +148,56 @@ textarea {
 
 .mb-3 {
   margin-bottom: 1rem; 
+}
+.select .lineas{
+  font-size: 13px;
+  padding: 10px;
+}
+.select {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  width: 100%; 
+  padding: 5px;
+}
+
+.crear {
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  padding: 8px 16px;
+  
+}
+.form-select{
+ font-size: 13px;
+ padding: 5px;
+ gap: 10px;
+}
+.input-group {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.input-group .form-control {
+  font-size: 13px;
+  width: 30%;
+  max-width: 150px;
+}
+.botonesfinales {
+  display: flex;
+  justify-content: center; 
+  gap: 10px; 
+  margin-top: 50px;
+  padding-bottom: 20px;
+}
+
+.botonesfinales button {
+  width: 100px;
+  font-family: Arial, sans-serif;
+  font-size: 12px; 
+}
+
+.modal {
+  z-index: 9999 !important; 
 }
