--- a/src/app/ver-convocatorias/ver-convocatorias.component.css
+++ b/src/app/ver-convocatorias/ver-convocatorias.component.css
@@ -1,20 +1,160 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+}
+
 .main-container {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    margin-left: 16.2%;
-    margin-top: 4%;
-    width: 83.5%;
-    transition: margin-left 0.3s ease;
-    border: 1px solid rgb(193, 193, 193);
-    z-index: 0; 
-  }
-  .main-container.with-sidebar {
-    margin-left: 16.2%;
-  }
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-left: 16.2%;
+  margin-top: 4%; 
+  width: 82.9%;
+  transition: margin-left 0.3s ease;
+  border: 1px solid rgb(193, 193, 193);
+}
+.main-container.with-sidebar {
+  margin-left: 16.2%;
+}
+
+.main-container.without-sidebar {
+  margin-left: 2.7%;
+  width: calc(100% - 3%);
+  max-width: 100%;
+}
+.img{
+  width: 50px;
+  padding: 0;
+}
+
+.main-header {
+  position: relative;
+  background-color: #f7f5f5;
+  color: #044BFF;
+  padding: 7px;
+  text-align: left;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  justify-content: space-between;
+}
+
+.close-btn {
+  position: absolute;
+  top: 2px; 
+  right: 5px; 
+  width: 20px; 
+  height: 20px; 
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+.general{
+  display: flex;
+  margin-top: 5px;
+  padding: 0;
+  color: black;
+  font-size: 13px;
+  border-top: 1px solid rgb(201, 201, 201);
+  justify-content: center;
+  text-align: center;
+  font-family: Arial, sans-serif;
   
-  .main-container.without-sidebar {
-    margin-left: 2.7%;
-    width: calc(100% - 3%);
-    max-width: 100%;
-  }
+}
+.card {
+  display: flex;
+  gap: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  height: 100px;
+  min-height: 100px;
+  width: 98%;
+  margin: 5px 10px;
+  overflow: hidden; 
+  justify-content: center;
+}
+.card H5{
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+}
+.card p{
+  font-size: 12px;
+  font-family: Arial, sans-serif;
+  color: #9b9999;
+}
+
+.card p {
+  font-size: 12px;
+  font-family: Arial, sans-serif;
+  color: #9b9999;
+  margin: 5px 0 0 0;
+}
+
+.card-links {
+  display: flex;
+  position: relative;
+  margin-left: 80%;
+  top: -40px;
+  gap: 15px; 
+}
+
+.card-links a {
+  font-size: 12px;
+  font-family: Arial, sans-serif;
+  color: #044BFF;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.card-links a:hover {
+  text-decoration: underline;
+}
+.estado {
+  font-size: 11px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #34AB1E;
+  padding: 3px 7px;
+  border-radius: 7px;
+  display: inline-block;
+  margin-left: 5px;
+}
+
+#inactiva{
+  background-color: #E47113;
+}
+.circle-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px; 
+  height: 40px;
+  position: relative;
+  top: 43px;
+  border-radius: 50%;
+  background-color: white;
+  overflow: hidden;
+  border: 1px solid #c7c6c6;
+  flex-shrink: 0; 
+}
+
+.circle-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-body{
+  margin-left: 59px;
+}
