--- a/src/app/view/ver-convocatorias/ver-convocatorias.component.html
+++ b/src/app/view/ver-convocatorias/ver-convocatorias.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="card-links">
         <a href="#">Inscribir Grupo</a>
-        <a [routerLink]="['/ver-convocatoria']">Ver más</a>
+        <a routerLink="/ver-convocatoria">Ver más</a>
       </div>
     </div>
     
@@ -30,7 +30,7 @@
       </div>
       <div class="card-links">
         <a href="#">Inscribir Grupo</a>
-        <a [routerLink]="['/ver-convocatoria']">Ver más</a>
+        <a routerLink="/ver-convocatoria">Ver más</a>
       </div>
     </div>
 
@@ -45,7 +45,7 @@
       </div>
       <div class="card-links">
         <a href="#">Inscribir Grupo</a>
-        <a [routerLink]="['/ver-convocatoria']">Ver más</a>
+        <a routerLink="/ver-convocatoria">Ver más</a>
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       </div>
       <div class="card-links">
         <a href="#">Inscribir Grupo</a>
-        <a [routerLink]="['/ver-convocatoria']">Ver más</a>
+        <a routerLink="/ver-convocatoria">Ver más</a>
       </div>
     </div>
     
