--- a/src/app/view/crear-convocatoria/crear-convocatoria.component.css
+++ b/src/app/view/crear-convocatoria/crear-convocatoria.component.css
@@ -91,13 +91,17 @@
 }
 
 textarea {
-  margin-top: -5px; 
-  margin-left: 183px;
-  width: 82%;
-  height: 150px; 
+  top: -15px; 
+  left: 185px;
+  width: 81%;
+  height: 200px; 
   padding: 4px; 
 }
-
+.object{
+  font-size: 13px;
+  font-family: Arial, sans-serif;
+  left: 0;
+}
 #input1 {
   margin-left: 53px;
 }
@@ -173,6 +177,11 @@ textarea {
  padding: 5px;
  gap: 10px;
 }
+.selectlineas{
+  width: 60%;
+  margin-left: 1%;
+
+}
 .input-group {
   display: flex;
   align-items: center;
@@ -207,4 +216,81 @@ textarea {
   font-size: 13px;
   font-family: Arial, sans-serif;
 
+}
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.checkbox-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  background: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.checkbox-btn:hover {
+  background-color: #72b0f3;
+  color: white;
+}
+
+
+.checkbox-btn input:checked + span {
+  font-weight: bold;
+
+}
+.visualizar-objetivos {
+  max-height: 200px; 
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+.custom-box {
+  width: 270px;
+  height: 50px;
+  max-height: 200px;
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  overflow-y: auto; 
+  overflow-x: hidden;
+  position: absolute;
+  top: 55%;
+  left: 63%;
+  font-size: 10px;
+  font-family: Arial, sans-serif;
+  gap: 5px;
+}
+
+.selected-item {
+  background-color: #f1f1f1;
+  padding: 5px 25px 5px 8px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(50% - 10px);
+  box-sizing: border-box;
+  position: relative;
+  width: auto;
+}
+
+.close-btn {
+  margin-left: 5px;
+  border: none;
+  background: none;
+  color: red;
+  font-weight: bold;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  padding: 5px;
+  transform: translateY(-50%);
 }
