--- a/src/app/view/inscripcion-grupo/inscripcion-grupo.component.css
+++ b/src/app/view/inscripcion-grupo/inscripcion-grupo.component.css
@@ -44,3 +44,28 @@
     justify-content: center;
     padding: 0;
   }
+  .aste {
+    color: red;
+    font-size: 10px;
+    margin-left: 2px; 
+  }
+  
+  .mb-3 {
+    padding: 4px 5px; 
+    margin-bottom: 0;
+    font-size: 13px;
+  }
+  
+  .mb-3 {
+    margin-bottom: 0;
+  }
+  .form-control {
+    margin-top: 0;
+    border-radius: 0;
+    height: 25px;
+    padding: 2px 5px; 
+    font-family: Arial, sans-serif;
+    font-size:13px;
+  }
+  
+   
