Incluyendo los cambios faltantes

--- a/src/app/view/inscripcion-grupo/inscripcion-grupo.component.html
+++ b/src/app/view/inscripcion-grupo/inscripcion-grupo.component.html
@@ -4,7 +4,7 @@
           <button class="btn btn-danger close-btn" (click)="Salir()">X</button>
     </header>
     <div class="mb-3 row g-0">
-        <label for="input" class="col-sm-2 col-form-label">Titulo Convocatoria: <span class="aste">(*)</span></label>
+        <label for="input" class="col-sm-2 col-form-label">Nombre del grupo de extension: <span class="aste">(*)</span></label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="input">
         </div>
